Updated references to SheetMatrix

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -47,7 +47,7 @@
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "SheetMatrix(array([[  2.15781968e-05,   3.08676308e-05,   4.36143882e-05, ...,\n",
+        "Matrix(array([[  2.15781968e-05,   3.08676308e-05,   4.36143882e-05, ...,\n",
         "          4.36143882e-05,   3.08676308e-05,   2.15781968e-05],\n",
         "       [  3.08676308e-05,   4.41561749e-05,   6.23904234e-05, ...,\n",
         "          6.23904234e-05,   4.41561749e-05,   3.08676308e-05],\n",
@@ -83,7 +83,7 @@
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "SheetMatrix(array([[  2.15781968e-05,   3.08676308e-05,   4.36143882e-05, ...,\n",
+        "Matrix(array([[  2.15781968e-05,   3.08676308e-05,   4.36143882e-05, ...,\n",
         "          4.36143882e-05,   3.08676308e-05,   2.15781968e-05],\n",
         "       [  3.08676308e-05,   4.41561749e-05,   6.23904234e-05, ...,\n",
         "          6.23904234e-05,   4.41561749e-05,   3.08676308e-05],\n",
