Updated Imagen homepage notebook

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:257fffb97df01ac25414e869b21404092ee373917fc636ec1565c0da0cc80181"
+  "signature": "sha256:19860fa79f62ee82f82a0bdbd034ed534520eda41036d843bd8731266b88f9b7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,11 +9,216 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The ImaGen package provides comprehensive support for creating resolution-independent one and two-dimensional spatial pattern distributions. ImaGen consists of a large library of primarily two-dimensional patterns, including mathematical functions, geometric primitives, images read from files, and many ways to combine or select from any other patterns. These patterns can be used in any Python program that needs configurable patterns or series of patterns.  Basically, as long as the code can accept a Python callable and will call it each time it needs a new pattern, users can then specify any pattern possible in ImaGen's pattern language, and the downstream code need not worry about any of the details about how the pattern is specified or generated.  This approach gives users full flexibility about which patterns they wish to use, while removing the downstream code from having to implement anything about patterns. See below for more background.\n",
+      "\n",
+      "Some example patterns:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<center><img src=\"https://ioam.github.io/imagen/_images/patterntypes_small.png\"/></center>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Usage"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To create a pattern, just ``import imagen``, then instantiate one of ImaGen's ``PatternGenerator`` classes.  Each of these classes support various parameters, which are each described in the [Reference Manual](Reference_Manual).  Any parameter values specified on instantiation become the defaults for that object:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "gaussian=imagen.Gaussian(xdensity=60,ydensity=60,size=0.3,aspect_ratio=1.0)[:]\n",
-      "gaussian"
+      "import imagen as ig\n",
+      "line=ig.Line(xdensity=5, ydensity=5, smoothing=0)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Then whenever the ``line`` object is called, you'll get a new [Numpy](http://numpy.org) array:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "line()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here the parameters ``xdensity`` and ``ydensity`` specified that a continuous 1.0&times;1.0 region in (x,y) space should be sampled on a 5&times;5 grid.  The ``line`` object can now be called repeatedly, with any parameter values specified to override those declared above:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "np.set_printoptions(1)\n",
+      "line(smoothing=0.1,orientation=0.8,thickness=0.4)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "ImaGen depends only on Numpy, Param, and HoloViews, none of which have any other required dependencies.  If matplotlib has been installed, however, ImaGen provides a convenient way to plot the pattern objects via the HoloViews visualization package:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import holoviews\n",
+      "%load_ext holoviews.ipython\n",
+      "import numpy as np\n",
+      "\n",
+      "line.set_param(xdensity=72,ydensity=72,orientation=np.pi/4, thickness=0.1, smoothing=0.02)\n",
+      "line[:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We will use this plotting interface to show off the remaining patterns, but please remember that the main purpose of ImaGen is to generate arrays for use in other programs, not simply to draw patterns for plotting!\n",
+      "\n",
+      "As you can see above, ``PatternGenerator`` objects return patterns based on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) for details).  Here, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numbergen as ng\n",
+      "from holoviews import NdLayout\n",
+      "import param\n",
+      "param.Dynamic.time_dependent=True\n",
+      "NdLayout(ig.SineGrating(orientation=np.pi*ng.UniformRandom()).anim(3))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As you can see, each time the sine grating was rendered, the pattern differed, because the parameter value for orientation was chosen randomly.  Of course, you can set any combination of patterns to dynamic values, to get arbitrarily complex variation over time:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sine_disk = ig.SineGrating(orientation=np.pi*ng.UniformRandom(),\n",
+      "                           scale=0.25*ng.ExponentialDecay(time_constant=5),\n",
+      "                           frequency=4+7*ng.UniformRandom(),\n",
+      "                           x=0.3*ng.NormalRandom(seed=1),\n",
+      "                           y=0.2*ng.UniformRandom(seed=2)-0.1,\n",
+      "                           mask_shape=ig.Disk(size=0.5,smoothing=0.01))\n",
+      "NdLayout(sine_disk.anim(3))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As you can see, ``PatternGenerator`` objects can also be used as a ``mask`` for another ``PatternGenerator``, which is one simple way to combine them.  \n",
+      "\n",
+      "``PatternGenerators`` can also be combined directly with each other to create ``Composite`` ``PatternGenerators``, which can make any possible 2D pattern.  For instance, we can easily sum 10 oriented ``Gaussian`` patterns, each with random positions and orientations, giving a different overall pattern at each time:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%opts Image.Pattern (cmap='hot')\n",
+      "gs = ig.Composite(operator=np.add,\n",
+      "                  generators=[ig.Gaussian(size=0.15,\n",
+      "                                          x=ng.UniformRandom(seed=i+1)-0.5,\n",
+      "                                          y=ng.UniformRandom(seed=i+2)-0.5,\n",
+      "                                          orientation=np.pi*ng.UniformRandom(seed=i+3))\n",
+      "                                for i in range(10)])\n",
+      "                 \n",
+      "NdLayout(gs.anim(4)).cols(5)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Here we created a ``Composite`` pattern explicitly, but it's usually easier to create them by simply using any of the usual Python operators (``+``, ``-``, ``*``, ``/``, ``**``, ``%``, ``&`` (min), and ``|`` (max)) as in the examples below (syntax requires latest git version).\n",
+      "\n",
+      "For instance, here's an example using ``np.maximum`` (via the ``|`` operator on ``PatternGenerator``s).  We also leave it as a HoloViews animation rather than laying it out over space:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%opts Image.Pattern (cmap='Blues_r')\n",
+      "l1 = ig.Line(orientation=-np.pi/4 - ng.ScaledTime()*np.pi/20)\n",
+      "l2 = ig.Line(orientation=+np.pi/4 - ng.ScaledTime()*np.pi/20)\n",
+      "(l1.anim(20) + l2.anim(20)) + (l1 | l2).anim(20)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The ``.anim()`` method collects results at different times conveniently.  What it's doing is repeatedly getting a copy of each pattern, then running ``param.Dynamic.time_fn.advance(1)`` to advance the nominal time, then getting another cop of each pattern until 20 times have been sampled.  The values are \"time dependent\" (because we set them to be so above), so that any randomness changes only when the time changes, and the randomness is computed as a function of time.  That way, regardless of the order you generate the patterns, or even if you go back and forward in time, you will always get the same results at a given nominal time.  In your own code, you can turn off time dependence (``param.Dynamic.time_dependent=False``), in which case a new pattern will be generated for every call to the ``PatternGenerator``.  Or, if you are working in a domain like simulation, you can set ``param.Dynamic.time_fn``) to match your own nominal time, advancing it as appropriate.  You can even set that function to real time, but you'll then get completely unpredictable randomness, which may be appropriate in some circumstances.  Setting ``time_dependent=True`` for some definition of time is usually a good idea, so that your results are repeatable.\n",
+      "\n",
+      "In any case, we used one operator above to make the cross image, but we can combine operators in any combination, here to mask a sweeping ``Line`` pattern with a ``Disk``, add the result to a rotating image, and create an animated GIF of the results with HoloViews:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import param\n",
+      "param.Dynamic.time_fn.advance(1)\n",
+      "param.Dynamic.time_fn()"
      ],
      "language": "python",
      "metadata": {},
@@ -23,12 +228,60 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%opts Image.Pattern (cmap='jet')\n",
-      "gaussian"
+      "%opts Image (cmap='gray')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%output holomap='gif'\n",
+      "from imagen.image import FileImage\n",
+      "image = FileImage(size=0.5, orientation=ng.ScaledTime()*np.pi/20)\n",
+      "\n",
+      "line = ig.Line(y=0.5-ng.ScaledTime()*0.05)\n",
+      "disk = ig.Disk(smoothing=0.01, size=0.8)\n",
+      "(image + (line*disk)).anim(40)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In each case, the (pseudo-)randomness and time scaling is very tightly controlled, computed as a fixed function of a time function (which could be a simple counter, could be real time, time in a simulator, etc., or simply disabled so that a different pattern could returned for every subsequent call).  This gives the user precise control over the randomness, in order to provide reproducible results.\n",
+      "\n",
+      "Below are shown examples of each of the pattern types currently provided, using their default values.  Unfortunately, in several cases (e.g. ``SparseNoise`` and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  For instance, the ``Selector`` pattern chooses from a set of patterns, e.g. one of a database of images, selecting one at random or sequentially depending on the parameters."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%opts Layout [sublabel_format=\"\"] Image (cmap='gray') [show_xaxis=None show_yaxis=None show_frame=True]\n",
+      "from imagen import *\n",
+      "from imagen.random import *\n",
+      "from imagen.image import *\n",
+      "np.sum([x()[:] for x in locals().values() if isinstance(x,type) \n",
+      "        and issubclass(x,PatternGenerator) and not x.abstract]).cols(5)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for many applications, as they are simply Numpy arrays.  \n",
+      "\n",
+      "``PatternGenerator`` objects can also have multiple channels, which is a more specialized usage that can be useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels.  RGB images can also be constructed out of combinations of any of the other patterns; see the ``ComposeChannels`` object.  Details of how to use multi-channel images will be presented in a separate tutorial. "
+     ]
     }
    ],
    "metadata": {}
