Minor fixes to homepage notebook

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:19860fa79f62ee82f82a0bdbd034ed534520eda41036d843bd8731266b88f9b7"
+  "signature": "sha256:47f7623407b0751f3ec00126970c794eaf86f1401b084f8cfb3bec48fab8c520"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -90,7 +90,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "ImaGen depends only on Numpy, Param, and HoloViews, none of which have any other required dependencies.  If matplotlib has been installed, however, ImaGen provides a convenient way to plot the pattern objects via the HoloViews visualization package:"
+      "ImaGen depends only on Numpy, Param, and HoloViews, none of which have any other required dependencies.  If matplotlib has been installed, however, ImaGen provides a convenient way to plot the pattern objects via the HoloViews package:"
      ]
     },
     {
@@ -218,7 +218,7 @@
      "input": [
       "import param\n",
       "param.Dynamic.time_fn.advance(1)\n",
-      "param.Dynamic.time_fn()"
+      "print(\"The current nominal time value is now %s\" % param.Dynamic.time_fn())"
      ],
      "language": "python",
      "metadata": {},
@@ -267,7 +267,7 @@
       "from imagen import *\n",
       "from imagen.random import *\n",
       "from imagen.image import *\n",
-      "np.sum([x()[:] for x in locals().values() if isinstance(x,type) \n",
+      "np.sum([x()[:] for x in locals().values() if isinstance(x,type)\n",
       "        and issubclass(x,PatternGenerator) and not x.abstract]).cols(5)"
      ],
      "language": "python",
