Minor fix to homepage notebook

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:47f7623407b0751f3ec00126970c794eaf86f1401b084f8cfb3bec48fab8c520"
+  "signature": "sha256:4942a1e97c914d6bf1718a07256fd65389e845ceae5867418fbb088397ac9cb4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -218,7 +218,7 @@
      "input": [
       "import param\n",
       "param.Dynamic.time_fn.advance(1)\n",
-      "print(\"The current nominal time value is now %s\" % param.Dynamic.time_fn())"
+      "print(\"The current nominal time value is %s\" % param.Dynamic.time_fn())"
      ],
      "language": "python",
      "metadata": {},
