--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The ImaGen package provides comprehensive support for creating resolution-independent one and two-dimensional spatial pattern distributions. ImaGen consists of a large library of primarily two-dimensional patterns, including mathematical functions, geometric primitives, images read from files, and many ways to combine or select from any other patterns. These patterns can be used in any Python program that needs configurable patterns or series of patterns.  Basically, as long as the code can accept a Python callable and will call it each time it needs a new pattern, users can then specify any pattern possible in ImaGen's pattern language, and the downstream code need not worry about any of the details about how the pattern is specified or generated.  This approach gives users full flexibility about which patterns they wish to use, while removing the downstream code from having to implement anything about patterns. See below for more background.\n",
+      "The ImaGen package provides comprehensive support for creating resolution-independent one- and two-dimensional pattern distributions. ImaGen consists of a large library of primarily two-dimensional spatial patterns, including mathematical functions, geometric primitives, and images read from files, along with many ways to combine or select from any other patterns. These patterns can be used in any Python program that needs configurable patterns or streams of patterns.  Basically, as long as the code can accept a Python callable and will call it each time it needs a new pattern, users can then specify any pattern possible in ImaGen's pattern language, and the downstream code need not worry about any of the details about how the pattern is specified or generated.  This approach gives users full flexibility about which patterns they wish to use, while removing the downstream code from having to implement anything about patterns. See below for more background.\n",
       "\n",
       "Some example patterns:"
      ]
@@ -36,7 +36,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To create a pattern, just ``import imagen``, then instantiate one of ImaGen's ``PatternGenerator`` classes.  Each of these classes support various parameters, which are each described in the [Reference Manual](Reference_Manual).  Any parameter values specified on instantiation become the defaults for that object:"
+      "To create a pattern, just ``import imagen``, then instantiate one of ImaGen's ``PatternGenerator`` classes.  Each of these classes support various parameters, which are each described in the [Reference Manual](Reference_Manual) or via ``help(``pattern-object-or-class``)``.  Any parameter values specified on instantiation become the defaults for that object:"
      ]
     },
     {
@@ -90,7 +90,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "ImaGen depends only on Numpy, Param, and HoloViews, none of which have any other required dependencies.  If matplotlib has been installed, however, ImaGen provides a convenient way to plot the pattern objects via the HoloViews package:"
+      "ImaGen depends only on Numpy, Param, and HoloViews, none of which have any other required dependencies, and it is thus easy to incorporate ImaGen into your own code to generate or use patterns freely.  An optional interface to matplotlib via HoloViews is also available, which provides a convenient way to plot the pattern objects:"
      ]
     },
     {
@@ -114,7 +114,7 @@
      "source": [
       "We will use this plotting interface to show off the remaining patterns, but please remember that the main purpose of ImaGen is to generate arrays for use in other programs, not simply to draw patterns for plotting!\n",
       "\n",
-      "As you can see above, ``PatternGenerator`` objects return patterns based on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) for details).  Here, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
+      "As you can see above, ``PatternGenerator`` objects return different patterns depending on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) for details).  Here, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
      ]
     },
     {
@@ -142,6 +142,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%%opts Image (cmap='gray')\n",
       "sine_disk = ig.SineGrating(orientation=np.pi*ng.UniformRandom(),\n",
       "                           scale=0.25*ng.ExponentialDecay(time_constant=5),\n",
       "                           frequency=4+7*ng.UniformRandom(),\n",
@@ -167,7 +168,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%%opts Image.Pattern (cmap='hot')\n",
       "gs = ig.Composite(operator=np.add,\n",
       "                  generators=[ig.Gaussian(size=0.15,\n",
       "                                          x=ng.UniformRandom(seed=i+1)-0.5,\n",
@@ -207,9 +207,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The ``.anim()`` method collects results at different times conveniently.  What it's doing is repeatedly getting a copy of each pattern, then running ``param.Dynamic.time_fn.advance(1)`` to advance the nominal time, then getting another cop of each pattern until 20 times have been sampled.  The values are \"time dependent\" (because we set them to be so above), so that any randomness changes only when the time changes, and the randomness is computed as a function of time.  That way, regardless of the order you generate the patterns, or even if you go back and forward in time, you will always get the same results at a given nominal time.  In your own code, you can turn off time dependence (``param.Dynamic.time_dependent=False``), in which case a new pattern will be generated for every call to the ``PatternGenerator``.  Or, if you are working in a domain like simulation, you can set ``param.Dynamic.time_fn``) to match your own nominal time, advancing it as appropriate.  You can even set that function to real time, but you'll then get completely unpredictable randomness, which may be appropriate in some circumstances.  Setting ``time_dependent=True`` for some definition of time is usually a good idea, so that your results are repeatable.\n",
+      "The ``.anim()`` method collects results at different times conveniently.  What it's doing is repeatedly getting a copy of each pattern, then running ``param.Dynamic.time_fn.advance(1.0)`` to advance the nominal time, then getting another copy of each pattern until 20 different times have been sampled.  The values are \"time dependent\" (because we set them to be so above), so that any randomness changes only when the time changes, and the randomness is computed as a function of time.  That way, regardless of the order you generate the patterns, or even if you go back and forward in time, you will always get the same results at a given nominal time.  In your own code, you can turn off time dependence (``param.Dynamic.time_dependent=False``), in which case a new pattern will be generated for every call to the ``PatternGenerator``.  Or, if you are working in a domain like simulation, you can set ``param.Dynamic.time_fn`` to a function based on your own nominal time, advancing it as appropriate.  You can even set that function to real time, in which case you'll get completely unpredictable randomness, which may be appropriate in some circumstances.  In any case, if there is some notion of time that governs the patterns you want to see, setting ``time_dependent=True`` is a good idea.\n",
       "\n",
-      "In any case, we used one operator above to make the cross image, but we can combine operators in any combination, here to mask a sweeping ``Line`` pattern with a ``Disk``, add the result to a rotating image, and create an animated GIF of the results with HoloViews:"
+      "We used one operator above to make the cross image, but we can combine operators in any combination, here to mask a sweeping ``Line`` pattern with a ``Disk``, add the result to a rotating image, and create an animated GIF of the results with HoloViews:"
      ]
     },
     {
@@ -254,9 +254,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In each case, the (pseudo-)randomness and time scaling is very tightly controlled, computed as a fixed function of a time function (which could be a simple counter, could be real time, time in a simulator, etc., or simply disabled so that a different pattern could returned for every subsequent call).  This gives the user precise control over the randomness, in order to provide reproducible results.\n",
+      "In each case, the (pseudo-)randomness and time scaling is very tightly controlled to give the user precise control over the randomness, in order to provide reproducible results.\n",
       "\n",
-      "Below are shown examples of each of the pattern types currently provided, using their default values.  Unfortunately, in several cases (e.g. ``SparseNoise`` and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  For instance, the ``Selector`` pattern chooses from a set of patterns, e.g. one of a database of images, selecting one at random or sequentially depending on the parameters."
+      "Below are shown examples of each of the pattern types currently provided, using their default parameter values.  Unfortunately, in several cases (e.g. ``SparseNoise`` and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  For instance, the ``Selector`` pattern chooses from a set of patterns, e.g. one of a database of images, selecting one at random or sequentially depending on the parameters."
      ]
     },
     {
@@ -278,9 +278,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for many applications, as they are simply Numpy arrays.  \n",
+      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for a huge variety of applications, as they are simply Numpy arrays.  \n",
       "\n",
-      "``PatternGenerator`` objects can also have multiple channels, which is a more specialized usage that can be useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels.  RGB images can also be constructed out of combinations of any of the other patterns; see the ``ComposeChannels`` object.  Details of how to use multi-channel images will be presented in a separate tutorial. "
+      "``PatternGenerator`` objects can also have multiple channels, which is less common but still useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels.  RGB images can also be constructed out of combinations of any of the other patterns; see the ``ComposeChannels`` object.  Details of how to use multi-channel images will be presented in a separate tutorial. "
      ]
     }
    ],
