Tidied up home page

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The ImaGen package provides comprehensive support for creating resolution-independent one- and two-dimensional pattern distributions. ImaGen consists of a large library of primarily two-dimensional spatial patterns, including mathematical functions, geometric primitives, and images read from files, along with many ways to combine or select from any other patterns. These patterns can be used in any Python program that needs configurable patterns or streams of patterns.  Basically, as long as the code can accept a Python callable and will call it each time it needs a new pattern, users can then specify any pattern possible in ImaGen's pattern language, and the downstream code need not worry about any of the details about how the pattern is specified or generated.  This approach gives users full flexibility about which patterns they wish to use, while removing the downstream code from having to implement anything about patterns. See below for more background.\n",
+      "The ImaGen package provides comprehensive support for creating resolution-independent one- and two-dimensional pattern distributions. ImaGen consists of a large library of primarily two-dimensional spatial patterns, including mathematical functions, geometric primitives, and images read from files, along with many ways to combine or select from any other patterns. These patterns can be used in any Python program that needs configurable patterns or streams of patterns.  Basically, as long as the code can accept a Python callable and will call it each time it needs a new pattern, users can then specify any pattern possible in ImaGen's simple declarative pattern language, and the downstream code need not worry about any of the details about how the pattern is specified or generated.  This approach gives users full flexibility about which patterns they wish to use, while relieving the downstream code from having to implement anything about patterns. See below for more background.\n",
       "\n",
       "Some example patterns:"
      ]
@@ -144,7 +144,7 @@
      "input": [
       "%%opts Image (cmap='gray')\n",
       "sine_disk = ig.SineGrating(orientation=np.pi*ng.UniformRandom(),\n",
-      "                           scale=0.25*ng.ExponentialDecay(time_constant=5),\n",
+      "                           scale=0.25*ng.ExponentialDecay(time_constant=3),\n",
       "                           frequency=4+7*ng.UniformRandom(),\n",
       "                           x=0.3*ng.NormalRandom(seed=1),\n",
       "                           y=0.2*ng.UniformRandom(seed=2)-0.1,\n",
@@ -207,7 +207,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The ``.anim()`` method collects results at different times conveniently.  What it's doing is repeatedly getting a copy of each pattern, then running ``param.Dynamic.time_fn.advance(1.0)`` to advance the nominal time, then getting another copy of each pattern until 20 different times have been sampled.  The values are \"time dependent\" (because we set them to be so above), so that any randomness changes only when the time changes, and the randomness is computed as a function of time.  That way, regardless of the order you generate the patterns, or even if you go back and forward in time, you will always get the same results at a given nominal time.  In your own code, you can turn off time dependence (``param.Dynamic.time_dependent=False``), in which case a new pattern will be generated for every call to the ``PatternGenerator``.  Or, if you are working in a domain like simulation, you can set ``param.Dynamic.time_fn`` to a function based on your own nominal time, advancing it as appropriate.  You can even set that function to real time, in which case you'll get completely unpredictable randomness, which may be appropriate in some circumstances.  In any case, if there is some notion of time that governs the patterns you want to see, setting ``time_dependent=True`` is a good idea.\n",
+      "The ``.anim()`` method collects results at different times conveniently.  What it's doing is repeatedly getting a copy of each pattern, then running ``param.Dynamic.time_fn.advance(1.0)`` to advance the nominal time, then getting another copy of each pattern until 20 different times have been sampled.  The values are \"time dependent\" (because we set them to be so above), so that any randomness changes only when the time changes, and the randomness is computed as a function of time.  That way, regardless of the order you generate the patterns, or even if you go back and forward in time, you will always get the same results at a given nominal time.  In your own code, you can turn off time dependence (``param.Dynamic.time_dependent=False``), in which case new parameter values will be generated for every call to the ``PatternGenerator``.  Or, if you are working in a domain like simulation, you can set ``param.Dynamic.time_fn`` to a function based on your own nominal time, advancing it as appropriate.  You can even set that function to real time, in which case you'll get completely unpredictable randomness, which may be appropriate in some circumstances.  Whenever there is some notion of time that governs the patterns you want to see, setting ``time_dependent=True`` is a good idea, so that you have precise control over the randomness to ensure reproducible results.\n",
       "\n",
       "We used one operator above to make the cross image, but we can combine operators in any combination, here to mask a sweeping ``Line`` pattern with a ``Disk``, add the result to a rotating image, and create an animated GIF of the results with HoloViews:"
      ]
@@ -216,6 +216,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%opts Image (cmap='gray')",
       "import param\n",
       "param.Dynamic.time_fn.advance(1)\n",
       "print(\"The current nominal time value is %s\" % param.Dynamic.time_fn())"
@@ -228,23 +229,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%opts Image (cmap='gray')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "%%output holomap='gif'\n",
       "from imagen.image import FileImage\n",
-      "image = FileImage(size=0.5, orientation=ng.ScaledTime()*np.pi/20)\n",
       "\n",
-      "line = ig.Line(y=0.5-ng.ScaledTime()*0.05)\n",
+      "image = FileImage(size=0.5, scale=3, orientation=ng.ScaledTime()*np.pi/20)\n",
+      "line  = ig.Line(y=0.6-ng.ScaledTime()*0.03)\n",
       "disk = ig.Disk(smoothing=0.01, size=0.8)\n",
-      "(image + (line*disk)).anim(40)"
+      "\n",
+      "(image + (line*disk)).anim(39)"
      ],
      "language": "python",
      "metadata": {},
@@ -254,9 +246,28 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In each case, the (pseudo-)randomness and time scaling is very tightly controlled to give the user precise control over the randomness, in order to provide reproducible results.\n",
+      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for a huge variety of applications, as they are simply Numpy arrays.  \n",
       "\n",
-      "Below are shown examples of each of the pattern types currently provided, using their default parameter values.  Unfortunately, in several cases (e.g. ``SparseNoise`` and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  For instance, the ``Selector`` pattern chooses from a set of patterns, e.g. one of a database of images, selecting one at random or sequentially depending on the parameters."
+      "``PatternGenerator`` objects can have any number of channels (with each channel being a Numpy array of the same size).  Multi-channel patterns are used less often, but are still useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels (accessed using *object*``.channels()``).  RGB images can also be constructed out of combinations of any of the other patterns using the ``ComposeChannels`` object:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from imagen.patterngenerator import ComposeChannels\n",
+      "ComposeChannels(generators=[ig.Line(orientation=np.pi/2),ig.Ring(),ig.SquareGrating()])[:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "Below are shown examples of each of the pattern types currently provided, using their default parameter values.  Unfortunately, in several cases (e.g. ``OrientationContrast``, ``SparseNoise``, and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  One particularly useful such pattern is ``Selector``; which chooses from a set of patterns, e.g. one of a database of images, selecting one at random or sequentially depending on the parameters."
      ]
     },
     {
@@ -273,15 +284,6 @@
      "language": "python",
      "metadata": {},
      "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for a huge variety of applications, as they are simply Numpy arrays.  \n",
-      "\n",
-      "``PatternGenerator`` objects can also have multiple channels, which is less common but still useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels.  RGB images can also be constructed out of combinations of any of the other patterns; see the ``ComposeChannels`` object.  Details of how to use multi-channel images will be presented in a separate tutorial. "
-     ]
     }
    ],
    "metadata": {}
