--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -54,7 +54,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Then whenever the ``line`` object is called, you'll get a new [Numpy](http://numpy.org) array:"
+      "Then whenever the ``line`` object is called, you'll get a new [NumPy](http://numpy.org) array:"
      ]
     },
     {
@@ -90,7 +90,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "ImaGen depends only on Numpy, Param, and HoloViews, none of which have any other required dependencies, and it is thus easy to incorporate ImaGen into your own code to generate or use patterns freely.  An optional interface to matplotlib via HoloViews is also available, which provides a convenient way to plot the pattern objects:"
+      "ImaGen depends only on NumPy, Param, and HoloViews, none of which have any other required dependencies, and it is thus easy to incorporate ImaGen into your own code to generate or use patterns freely.  An optional interface to matplotlib via HoloViews is also available, which provides a convenient way to plot the pattern objects:"
      ]
     },
     {
@@ -99,7 +99,6 @@
      "input": [
       "import holoviews\n",
       "%load_ext holoviews.ipython\n",
-      "import numpy as np\n",
       "\n",
       "line.set_param(xdensity=72,ydensity=72,orientation=np.pi/4, thickness=0.1, smoothing=0.02)\n",
       "line[:]"
@@ -114,7 +113,7 @@
      "source": [
       "We will use this plotting interface to show off the remaining patterns, but please remember that the main purpose of ImaGen is to generate arrays for use in other programs, not simply to draw patterns for plotting!\n",
       "\n",
-      "As you can see above, ``PatternGenerator`` objects return different patterns depending on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) for details).  Here, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
+      "As you can see above, ``PatternGenerator`` objects return different patterns depending on their parameter values. An important feature of these parameter values is that any of them can be set to \"dynamic\" values, which will then result in a different pattern each time (see the [Param package](http://ioam.github.io/param) and its ``numbergen`` module for details).  Here, let's define a ``SineGrating`` object with a random orientation, collect four of them at different times (using the ``.anim()`` method), and lay them out next to each other (using the ``NdLayout`` class from HoloViews):"
      ]
     },
     {
@@ -161,7 +160,7 @@
      "source": [
       "As you can see, ``PatternGenerator`` objects can also be used as a ``mask`` for another ``PatternGenerator``, which is one simple way to combine them.  \n",
       "\n",
-      "``PatternGenerators`` can also be combined directly with each other to create ``Composite`` ``PatternGenerators``, which can make any possible 2D pattern.  For instance, we can easily sum 10 oriented ``Gaussian`` patterns, each with random positions and orientations, giving a different overall pattern at each time:"
+      "``PatternGenerator``s can also be combined directly with each other to create ``Composite`` ``PatternGenerator``s, which can make any possible 2D pattern.  For instance, we can easily sum 10 oriented ``Gaussian`` patterns, each with random positions and orientations, giving a different overall pattern at each time:"
      ]
     },
     {
@@ -185,9 +184,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Here we created a ``Composite`` pattern explicitly, but it's usually easier to create them by simply using any of the usual Python operators (``+``, ``-``, ``*``, ``/``, ``**``, ``%``, ``&`` (min), and ``|`` (max)) as in the examples below (syntax requires latest git version).\n",
+      "A ``Composite`` pattern works just like any other pattern, so that it can be placed, rotated, combined with others, etc., allowing you to build up arbitrarily complex objects out of simple primitives.  Here we created a ``Composite`` pattern explicitly, but it's usually easier to create them by simply using any of the usual Python operators (``+``, ``-``, ``*``, ``/``, ``**``, ``%``, ``&`` (min), and ``|`` (max)) as in the examples below (syntax requires latest git version).\n",
       "\n",
-      "For instance, here's an example using ``np.maximum`` (via the ``|`` operator on ``PatternGenerator``s).  We also leave it as a HoloViews animation rather than laying it out over space:"
+      "For instance, here's an example using ``np.maximum`` (via the ``|`` operator on ``PatternGenerator``s), rotating the composite pattern together as a unit.  We also leave it as a HoloViews animation rather than laying it out over space:"
      ]
     },
     {
@@ -195,9 +194,11 @@
      "collapsed": false,
      "input": [
       "%%opts Image.Pattern (cmap='Blues_r')\n",
-      "l1 = ig.Line(orientation=-np.pi/4 - ng.ScaledTime()*np.pi/20)\n",
-      "l2 = ig.Line(orientation=+np.pi/4 - ng.ScaledTime()*np.pi/20)\n",
-      "(l1.anim(20) + l2.anim(20)) + (l1 | l2).anim(20)"
+      "l1 = ig.Line(orientation=-np.pi/4)\n",
+      "l2 = ig.Line(orientation=+np.pi/4)\n",
+      "cross = l1 | l2\n",
+      "cross.orientation=ng.ScaledTime()*(np.pi/-20)\n",
+      "l1.anim(20) + l2.anim(20) + cross.anim(20)"
      ],
      "language": "python",
      "metadata": {},
@@ -248,15 +249,14 @@
      "source": [
       "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for a huge variety of applications, as they are simply Numpy arrays.  \n",
       "\n",
-      "``PatternGenerator`` objects can have any number of channels (with each channel being a Numpy array of the same size).  Multi-channel patterns are used less often, but are still useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels (accessed using *object*``.channels()``).  RGB images can also be constructed out of combinations of any of the other patterns using the ``ComposeChannels`` object:"
+      "``PatternGenerator`` objects can have any number of channels (with each channel generating a Numpy array of the same size).  Multi-channel patterns are used less often, but are still useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels (accessed using *object*``.channels()``).  RGB images can also be constructed out of combinations of any of the other patterns using the ``ComposeChannels`` object:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from imagen.patterngenerator import ComposeChannels\n",
-      "ComposeChannels(generators=[ig.Line(orientation=np.pi/2),ig.Ring(),ig.SquareGrating()])[:]"
+      "ig.ComposeChannels(generators=[ig.Line(orientation=np.pi/2),ig.Ring(),ig.SquareGrating()])[:]"
      ],
      "language": "python",
      "metadata": {},
@@ -267,7 +267,7 @@
      "metadata": {},
      "source": [
       "\n",
-      "Below are shown examples of each of the pattern types currently provided, using their default parameter values.  Unfortunately, in several cases (e.g. ``OrientationContrast``, ``SparseNoise``, and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  One particularly useful such pattern is ``Selector``; which chooses from a set of patterns, e.g. one of a database of images, selecting one at random or sequentially depending on the parameters."
+      "Below are shown examples of each of the pattern types currently provided, using their default parameter values.  Unfortunately, in several cases (e.g. ``OrientationContrast``, ``SparseNoise``, and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  One particularly useful such pattern is ``Selector``; which chooses from a set of patterns, e.g. an image selected randomly or sequentially from a database and then randomly rotated and translated depending on the parameters."
      ]
     },
     {
