Minor reformatting of notebook

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4942a1e97c914d6bf1718a07256fd65389e845ceae5867418fbb088397ac9cb4"
+  "signature": "sha256:c08ae36038cc8ad17b9497cfa4fe14388a98201ce0c8d109be48ab0e297d63a0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -217,9 +217,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%opts Image (cmap='gray')",
+      "%opts Image (cmap='gray')\n",
       "import param\n",
+      "\n",
       "param.Dynamic.time_fn.advance(1)\n",
+      "\n",
       "print(\"The current nominal time value is %s\" % param.Dynamic.time_fn())"
      ],
      "language": "python",
