Added better default values for OrientationContrast, SparseNoise, and DenseNoise

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c08ae36038cc8ad17b9497cfa4fe14388a98201ce0c8d109be48ab0e297d63a0"
+  "signature": "sha256:d94096c468f4476db9171d291433c2088554cc49f74430b96f29f6d78d63874c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -269,7 +269,8 @@
      "metadata": {},
      "source": [
       "\n",
-      "Below are shown examples of each of the pattern types currently provided, using their default parameter values.  Unfortunately, in several cases (e.g. ``OrientationContrast``, ``SparseNoise``, and ``DenseNoise``), the default values do not show off what the pattern can do, so you'll need to instantiate and try it out for yourself!  One particularly useful such pattern is ``Selector``; which chooses from a set of patterns, e.g. an image selected randomly or sequentially from a database and then randomly rotated and translated depending on the parameters."
+      "Below are shown examples of each of the pattern types currently provided, using their default parameter values. Very many different parameter values can be chosen, to produce a much wider range of patterns, and adding a new pattern is very easy.  One important pattern not yet covered in this tutorial is \n",
+      "``Selector``; which chooses from a set of patterns, e.g. an image selected randomly or sequentially from a database and then randomly rotated and translated depending on the parameters."
      ]
     },
     {
