Added output_fn and ComposeChannels examples

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d94096c468f4476db9171d291433c2088554cc49f74430b96f29f6d78d63874c"
+  "signature": "sha256:0a7988088351745335be071764af7e5967788b7b744e1d8e0dd0c9d36d4cc8c1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -249,15 +249,41 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for a huge variety of applications, as they are simply Numpy arrays.  \n",
-      "\n",
-      "``PatternGenerator`` objects can have any number of channels (with each channel generating a Numpy array of the same size).  Multi-channel patterns are used less often, but are still useful in some cases.  For instance, color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels (accessed using *object*``.channels()``).  RGB images can also be constructed out of combinations of any of the other patterns using the ``ComposeChannels`` object:"
+      "Once the pattern has been generated, but before it is returned, you can apply any function to the data that you like, via the ``output_fns`` parameter.  A variety of useful ``TransferFn``s are supplied for use as ``output_fns``, such as thresholding functions, normalizing functions (L0, L1, L2, L-infinity, etc.), and convolutions. Any number of these or your own functions can be applied, in order:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import imagen.transferfn as tf\n",
+      "from imagen.transferfn.sheet_tf import Convolve\n",
+      "\n",
+      "(FileImage()[:] + \\\n",
+      "FileImage(output_fns=[tf.BinaryThreshold()])[:] + \\\n",
+      "FileImage(output_fns=[Convolve()])[:] + \\\n",
+      "FileImage(output_fns=[tf.BinaryThreshold(),Convolve()])[:] + \\\n",
+      "FileImage(output_fns=[Convolve(kernel_pattern=ig.Gaussian(size=0.01)),tf.BinaryThreshold()])[:]).cols(5)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The above examples all show \"single-channel\" ``PatternGenerator`` objects, which are very general and usable for a huge variety of applications, as they are simply Numpy arrays.  \n",
+      "\n",
+      "``PatternGenerator`` objects can have any number of channels (with each channel generating a Numpy array of the same size).  Multi-channel patterns are used less often, but are particularly useful for generating color images.  Color images loaded by the ``FileImage`` pattern will have four channels, one for the monochrome image (as above), and the other three for the red, green, and blue channels (accessed using *object*``.channels()``).  RGB images can also be constructed by colorizing a monochrome pattern, or out of combinations of any of the other patterns, using the ``ComposeChannels`` object:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from imagen.image import ScaleChannels\n",
+      "ig.ComposeChannels(generators=[ig.Spiral(smoothing=0.02),ig.Spiral(),ig.Spiral(scale=0)])[:] + \\\n",
       "ig.ComposeChannels(generators=[ig.Line(orientation=np.pi/2),ig.Ring(),ig.SquareGrating()])[:]"
      ],
      "language": "python",
