Ensured that patterns on the homepage are shown in a consistent order

--- a/doc/index.ipynb
+++ b/doc/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0a7988088351745335be071764af7e5967788b7b744e1d8e0dd0c9d36d4cc8c1"
+  "signature": "sha256:7011fc6f609cd41eb22f0463872ec23f071600cb0ad668d4faaa48ae5f0ecce4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -307,7 +307,7 @@
       "from imagen import *\n",
       "from imagen.random import *\n",
       "from imagen.image import *\n",
-      "np.sum([x()[:] for x in locals().values() if isinstance(x,type)\n",
+      "np.sum([x()[:] for _, x in sorted(locals().items()) if isinstance(x,type)\n",
       "        and issubclass(x,PatternGenerator) and not x.abstract]).cols(5)"
      ],
      "language": "python",
