Improved layout plotting in hegde_cc07 Tutorial

--- a/doc/Tutorials/hegde_cc07.ipynb
+++ b/doc/Tutorials/hegde_cc07.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:156b4e445e4c301c4151fcf88d6a0c91182b4f9cd7e6a7fe96876c4afb94ef9d"
+  "signature": "sha256:8216b14f319d640741c242bd449465305e7859c070361b64402f3ba93036848e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,7 +45,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%opts Layout [sublabel_format=\"\"] Image (cmap='gray') [show_xaxis=None show_yaxis=None show_frame=True]\n",
+      "%output dpi=150 size=100\n",
+      "%opts Layout [sublabel_format=\"\" vertical_spacing=0.05 horizontal_spacing=0.05] Image (cmap='gray') [show_xaxis=None show_frame=True show_yaxis=None show_frame=True]\n",
       "from imagen import *\n",
       "variants = 4 # Number of variants for each subclass"
      ],
@@ -57,11 +58,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "sin1 = [SineGrating(phase=np.pi/2,frequency=2.0,orientation=i*np.pi/variants) for i in range(variants)]\n",
-      "sin2 = [SineGrating(phase=np.pi/2,frequency=3.1,orientation=i*np.pi/variants) for i in range(variants)]\n",
-      "sin3 = [SineGrating(phase=np.pi/2,frequency=4.2,orientation=i*np.pi/variants) for i in range(variants)]\n",
-      "sinusoidal = sin1 + sin2 + sin3\n",
-      "np.sum([p[:] for p in sinusoidal]).cols(8)"
+      "orientations = (i*np.pi/variants for i in range(variants)) \n",
+      "frequencies = [2.0, 3.1, 4.2]\n",
+      "sin = {(o, f): SineGrating(phase=np.pi/2, frequency=f,orientation=o)\n",
+      "       for o in orientations for f in frequencies}\n",
+      "sinusoidal = hv.NdLayout({k:v[:] for k,v in sin.items()}, key_dimensions=['Orientation', 'Frequency']) \n",
+      "sinusoidal.cols(6)"
      ],
      "language": "python",
      "metadata": {},
@@ -71,11 +73,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "hyp1 = [HyperbolicGrating(orientation=i*np.pi/(2*variants),size=0.36,thickness=0.040) for i in range(variants)]\n",
-      "hyp2 = [HyperbolicGrating(orientation=i*np.pi/(2*variants),size=0.27,thickness=0.030) for i in range(variants)]\n",
-      "hyp3 = [HyperbolicGrating(orientation=i*np.pi/(2*variants),size=0.18,thickness=0.015) for i in range(variants)]\n",
-      "hyperbolic = hyp1 + hyp2 + hyp3\n",
-      "np.sum([p[:] for p in hyperbolic]).cols(8)"
+      "size_thickness = zip([0.18, 0.27, 0.36], [0.015, 0.03, 0.04])\n",
+      "orientations = (i*np.pi/(2*variants) for i in range(variants))\n",
+      "hyp = {(s, t, o): HyperbolicGrating(size=s, thickness=t, orientation=o)\n",
+      "       for o in orientations for (s, t) in size_thickness}\n",
+      "hyperbolic = hv.NdLayout({k:v[:] for k,v in hyp.items()}, key_dimensions=['Size', 'Thickness', 'Orientation'])\n",
+      "hyperbolic.cols(6)"
      ],
      "language": "python",
      "metadata": {},
@@ -251,7 +254,7 @@
       "concentric_like = pol1 + pol2[1:] + pol3[2:] + pol4[2:] + pol5[3:]\n",
       "radial_like = pol2[:1] + pol3[:2] + pol4[:2] + pol5[:3] + pol6\n",
       "\n",
-      "grating_stimuli_subclasses = [sinusoidal,hyperbolic,concentric_like,radial_like]\n",
+      "grating_stimuli_subclasses = [list(sin.values()), list(hyp.values()), concentric_like, radial_like]\n",
       "grating_stimuli_subclasses_labels = ['sinusoidal''hyperbolic','concentric-like','radial-like']\n",
       "\n",
       "contour_stimuli_subclasses = [bar,tristar,cross,star,acute,right,obtuse,quarter,semi,threeqtrs]\n",
@@ -259,14 +262,22 @@
       "                                     'right angle','obtuse angle','quarter arc','semi-circle','3/4 arc']\n",
       "\n",
       "all_stimuli_subclasses = grating_stimuli_subclasses + contour_stimuli_subclasses\n",
-      "all_stimuli_subclasses_labels = grating_stimuli_subclasses_labels + contour_stimuli_subclasses_labels\n",
-      "\n",
-      "#Can view all patterns at once\n",
-      "#np.sum([p[:] for c in all_stimuli_subclasses for p in c]).cols(8)"
+      "all_stimuli_subclasses_labels = grating_stimuli_subclasses_labels + contour_stimuli_subclasses_labels"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Can view all patterns at once\n",
+      "\n",
+      "```python\n",
+      "np.sum([p[:] for c in all_stimuli_subclasses for p in c]).cols(8)\n",
+      "```"
+     ]
     }
    ],
    "metadata": {}
